# whisper-dreamscribe

./: .env-example  .gitignore  Dockerfile  Makefile  Readme.md  config.py  deploy-local.bat  deploy-local.ps1  deploy.sh  docker-compose-prod.yml  docker-compose.yml  download-model.py  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
scripts/: deploy.bat  deploy.sh  download-model.py
src/: __init__.py  config.py  main.py
src/models/: __init__.py  whisper_model.py
src/services/: __init__.py  audio_service.py  queue_service.py
src/utils/: __init__.py  logger.py
