[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-dreamscribe"
version = "1.0.0"
description = "High-performance AI audio transcription service with Redis queues"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "aiohttp>=3.9.5",
    "bullmq>=2.15.0",
    "redis>=5.0.4",
    "faster-whisper>=1.0.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
whisper-worker = "src.main:main"
download-model = "scripts.download_model:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
